src/objects/Apttus_Config2__ProductAttributeRuleAction__c.object
<CustomObject>
    <description>Represents a single action in a product attribute rule</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountScopeOper__c</fullName>
        <description>The account scope operator</description>
        <inlineHelpText>The account scope operator</inlineHelpText>
        <label>Account Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                    <default>true</default>
                    <label>in</label>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountScope__c</fullName>
        <description>One or more accounts associated with the action</description>
        <inlineHelpText>One or more accounts associated with the action</inlineHelpText>
        <label>Account Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionCriteriaExpression__c</fullName>
        <description>The action criteria expression</description>
        <inlineHelpText>The action criteria expression</inlineHelpText>
        <label>Action Criteria Expression</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionCriteria__c</fullName>
        <description>The action criteria specification</description>
        <inlineHelpText>The action criteria specification</inlineHelpText>
        <label>Action Criteria</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Action__c</fullName>
        <description>The action associated with the rule</description>
        <inlineHelpText>The action associated with the rule</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allow</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Reset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Field__c</fullName>
        <description>The target attribute for the action</description>
        <inlineHelpText>The target attribute for the action</inlineHelpText>
        <label>Target Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message__c</fullName>
        <description>The action message</description>
        <inlineHelpText>The action message</inlineHelpText>
        <label>Message</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductAttributeRuleId__c</fullName>
        <description>ID of the associated product attribute rule</description>
        <inlineHelpText>ID of the associated product attribute rule</inlineHelpText>
        <label>Product Attribute Rule</label>
        <referenceTo>Apttus_Config2__ProductAttributeRule__c</referenceTo>
        <relationshipLabel>Product Attribute Rule Actions</relationshipLabel>
        <relationshipName>ProductAttributeRuleActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyScopeOper__c</fullName>
        <description>The product family scope operator</description>
        <inlineHelpText>The product family scope operator</inlineHelpText>
        <label>Product Family Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                    <default>true</default>
                    <label>in</label>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyScope__c</fullName>
        <description>One or more product families associated with the action</description>
        <inlineHelpText>One or more product families associated with the action</inlineHelpText>
        <label>Product Family Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupScopeOper__c</fullName>
        <description>The product group scope operator</description>
        <inlineHelpText>The product group scope operator</inlineHelpText>
        <label>Product Group Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                    <default>true</default>
                    <label>in</label>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupScope__c</fullName>
        <description>One or more product groups associated with the action</description>
        <inlineHelpText>One or more product groups associated with the action</inlineHelpText>
        <label>Product Group Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScopeOper__c</fullName>
        <description>The product scope operator</description>
        <inlineHelpText>The product scope operator</inlineHelpText>
        <label>Product Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                    <default>true</default>
                    <label>in</label>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScope__c</fullName>
        <description>One or more products associated with the action</description>
        <inlineHelpText>One or more products associated with the action</inlineHelpText>
        <label>Product Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ValueExpression__c</fullName>
        <description>The value expression for the action</description>
        <inlineHelpText>The value expression for the action</inlineHelpText>
        <label>Value Expression</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Attribute Rule Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Attribute Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>